# FIREFLY-Validation

./: .gitignore  LICENSE  README.md  conftest.py  fireflyverify.spec  pyproject.toml  run_verify.py
.github/workflows/: build.yml  tests.yml
assets/: icon.icns
fireflyverify/: __init__.py  cli.py  constants.py
fireflyverify/adapters/: __init__.py  common.py  firefly_output.py  ground_truth.py  palmtracer_output.py
fireflyverify/scoring/: __init__.py  config.py  figures.py  io.py  metrics.py  msdfit.py  public.py  report.py  simulator.py
fireflyverify/ui/: app_qml.py
fireflyverify/ui/controllers/: app_controller.py  theme_controller.py  verify_controller.py
fireflyverify/ui/controllers/providers/: figure_provider.py  icon_provider.py
fireflyverify/ui/qml/: Main.qml
fireflyverify/ui/qml/components/: Alert.qml  Badge.qml  BarGrow.qml  Button.qml  Card.qml  CheckDraw.qml  Checkbox.qml  CollapsibleSection.qml  ConfirmModal.qml  CountUp.qml  DashedRect.qml  DeltaFlash.qml  DropTarget.qml  EdgePanel.qml  FadeRise.qml  FieldInput.qml  FieldRow.qml  FigureReveal.qml  FlowBorder.qml  Icon.qml  IconButton.qml  IndeterminateShimmer.qml  LayerRow.qml  LoadingDots.qml  MetricStat.qml  Modal.qml  MoleculeField.qml  MotionLegend.qml  Odometer.qml  ParameterSidebar.qml  Pop.qml  ProgressRing.qml  Reveal.qml  (+14 more)
fireflyverify/ui/theme/: ui_theme.py
tests/: test_cli.py  test_end_to_end.py  test_ground_truth.py  test_gui_smoke.py  test_msdfit.py  test_scoring_metrics.py  test_scoring_public.py  test_scoring_report.py  test_scoring_simulator.py  test_verify_controller.py
(+4 files in other folders)
